# backend

./: Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 2025_05_15_1924-6370aa6ee82e_bookings_and_rooms.py  2025_05_15_2117-71d25aaef758_bookings_and_rooms.py  2025_05_15_2345-31f979bca494_alert_and_category_models.py  2025_05_16_1902-d41adfeb923f_update_room.py  2025_05_17_1116-60af35b25bbd_create_customer.py  2025_05_17_1152-51d0219c7214_create_many_to_many.py  2025_05_18_0353-49af6d7703d5_admin_token_update_room.py
src/: main.py
src/controllers/api/: __init__.py  alert.py  analytics.py  auth.py  booking.py  category.py  customer.py  room.py
src/controllers/ws/: __init__.py  alert.py
src/core/: config.py  db_helper.py  providers.py
src/core/middlewares/: auth.py
src/core/models/: __init__.py  admin.py  alert.py  base.py  booking.py  booking_customer.py  category.py  customer.py  room.py  token.py
src/core/repositories/: __init__.py  admin.py  alert.py  booking.py  category.py  customer.py  room.py  token.py
src/core/schemas/: __init__.py  admin.py  alert.py  booking.py  category.py  customer.py  room.py
